--- a/frontend/src/pages/css/HomePage.module.css
+++ b/frontend/src/pages/css/HomePage.module.css
@@ -481,8 +481,13 @@ h2 {
 }
 
 .testimonialCard {
-    border: none;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: left;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    border: none;
 }
 
 .testimonialProfile {
@@ -510,29 +515,14 @@ h2 {
     color: #4CAF50;
     font-weight: 600;
     font-size: 14px;
+    margin-bottom: 5px;
 }
 
 .testimonialTitle {
     color: #888;
     font-size: 12px;
-    font-weight: 400;
 }
 
-.btnMoreTestimonials {
-    background-color: #f5f5f5;
-    color: #333;
-    border: none;
-    padding: 10px 25px;
-    font-size: 14px;
-    font-weight: 500;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.btnMoreTestimonials:hover {
-    background-color: #e0e0e0;
-}
 /* Footer */
 footer {
     padding: 40px 50px;
